membuat activity home dan login untuk dosen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">QuisTime</string>
+    <string name="signcontinue">Continue</string>
+    <string name="enter_your_password">enter_your_password</string>
+    <string name="forgot_password">enter_your_password</string>
+    <string name="enter_pasword">Enter Your Password</string>
 </resources>
