--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,12 @@
     <string name="enter_your_password">enter_your_password</string>
     <string name="forgot_password">enter_your_password</string>
     <string name="enter_pasword">Enter Your Password</string>
+
+    <array name="Soal">
+        <item>A</item>
+        <item>B</item>
+        <item>C</item>
+        <item>D</item>
+        <item>E</item>
+    </array>
 </resources>
