--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="enter_your_password">enter_your_password</string>
     <string name="forgot_password">enter_your_password</string>
     <string name="enter_pasword">Enter Your Password</string>
+    <string name="enter_kelas">Enter Your Class</string>
+    <string name="enter_token">Masukkan Token Anda</string>
+    <string name="enter_nama">Enter your Name</string>
 
     <array name="Soal">
         <item>A</item>
