Mengupdate tampilan dan menambah Timer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="forgot_password">enter_your_password</string>
     <string name="enter_pasword">Enter Your Password</string>
     <string name="enter_kelas">Enter Your Class</string>
-    <string name="enter_token">Masukkan Token Anda</string>
+    <string name="enter_token">Masukkan Token Matkul</string>
     <string name="enter_nama">Enter your Name</string>
     <string name="buat">Membuat Soal Quis Dengan Mudah</string>
     <string name="mwnjawab">Menjawab Soal Dengan Mudah Menggunakan Aplikasi QuisTime</string>
